--- a/B&B_App/Shared/NavMenu.razor
+++ b/B&B_App/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@using B_B_App.Components.Dialogs;
 @using B_B_ClassLibrary.BusinessModels;
-<div class="top-row ps-3 navbar navbar-dark" style="height:15%;">
+<div class="top-row ps-3 navbar navbar-light" style="height:15%;">
     <div class="container-fluid">
         @if (logedIn)
         {
