--- a/B&B_App/Pages/UserCreater.razor
+++ b/B&B_App/Pages/UserCreater.razor
@@ -4,17 +4,28 @@
 @using B_B_App.Services;
 @using B_B_ClassLibrary.BusinessModels;
 @inject IUserService<User> userService
+@inject ILandlordService<Landlord> landlordService
 
-<MudCardHeader >
+<MudCardHeader>
     Opret ny bruger
 </MudCardHeader>
 
-<MudSelect @bind-Value="StringValue" Label="Vil du oprettes som lejer eller udlejer?" Placeholder="Vælg type af bruger">
+@*<MudSelect @bind-Value="StringValue" Label="Vil du oprettes som lejer eller udlejer?" Placeholder="Vælg type af bruger">
     <MudSelectItem Value="@("Lejer")">Lejer</MudSelectItem>
     <MudSelectItem Value="@("Udlejer")">Udlejer</MudSelectItem>
-</MudSelect>
+</MudSelect>*@
+<DropDown TItem="string" OnSelected="@OnUserTypeSelected">
+    <InitialTip>Vil du oprette dig som lejer eller udlejer?</InitialTip>
+    <ChildContent>
+        @foreach (var type in UserTypes)
+        {
+            <DropDownItem Item="@type">@type</DropDownItem>
+        }
+    </ChildContent>
+</DropDown>
+
 <br />
-@if (StringValue != "")
+@if (UserType != "")
 {
     <MudItem xs="15" sm="10">
         <MudForm @bind-IsValid="_formSuccess" @bind-Errors="@formErrors">
@@ -25,13 +36,13 @@
 
             <MudTextField @bind-Value="_user.Email" Label="Indtast email" Placeholder="Email"></MudTextField>
 
-            <MudTextField @bind-Value="_user.Password" Label="Indkast adgangskode" Placeholder="Adgangskode" Adornment="Adornment.End" InputType="@PasswordInput" OnAdornmentClick="OnPasswordVisibilityClick"></MudTextField>
+            <MudTextField @bind-Value="_user.Password" Label="Indkast adgangskode" Placeholder="Adgangskode" Adornment="Adornment.End" InputType="@PasswordInput" OnAdornmentClick="OnPasswordVisibilityClick" AdornmentIcon="PasswordInputIcon" AdornmentAriaLabel="Vis adgangskode"></MudTextField>
 
             <MudTextField @bind-Value="_user.PhoneNumber" Label="Indtast telefonnummer" Placeholder="Telefonnummer"></MudTextField>
 
             <MudTextField @bind-Value="_user.Country" Label="Indtast land" Placeholder="Land"></MudTextField>
 
-            @if (StringValue == "Udlejer")
+            @if (UserType == "Udlejer")
             {
 
                 <MudTextField @bind-Value="_landlord.CPRNumber" Label="Indtast CPR-nummer" Placeholder="CPR-nummer" />
@@ -59,7 +70,8 @@
 </MudButton>
 
 @code {
-    public string StringValue;
+    public string UserType;
+    public string[] UserTypes = { "Lejer", "Udlejer" };
     private User _user = new User();
     private Landlord _landlord = new Landlord();
     private bool isLandlord;
@@ -87,11 +99,28 @@
         }
     }
 
+    public void OnUserTypeSelected(string type)
+    {
+        UserType = type;
+    }
+
     public async void OnSubmitUser()
     {
-        _user.Created = DateTime.Now;
-        _user.Id = 1;
-        await userService.Create(_user);
+        if (UserType == "Lejer")
+        {
+            _user.Created = DateTime.Now;
+            await userService.Create(_user);
+        }
+        else if (UserType == "Udlejer")
+        {
+            _landlord.FirstName = _user.FirstName;
+            _landlord.LastName = _user.LastName;
+            _landlord.Email = _user.Email;
+            _landlord.Password = _user.Password;
+            _landlord.PhoneNumber = _user.PhoneNumber;
+            _landlord.Country = _user.Country;
+            await landlordService.Create(_landlord);
+        }
     }
 
     protected override void OnInitialized()
