--- a/B&B_App/_Imports.razor
+++ b/B&B_App/_Imports.razor
@@ -17,3 +17,4 @@
 @using B_B_App.Services
 @using B_B_App.Components.FormEditing
 @using Blazored.FluentValidation
+@using B_B_App.Components.DropDown
