Fixed last problems with RoomEditor

--- a/B&B_App/Pages/RoomEditor.razor
+++ b/B&B_App/Pages/RoomEditor.razor
@@ -110,6 +110,7 @@
     private async void SaveChanges()
     {
         await roomService.Update(_room);
+        StateHasChanged();
     }
 
     private void SelectPicture(int id)
