Added ErrorManager to RoomDetails

--- a/B&B_App/_Imports.razor
+++ b/B&B_App/_Imports.razor
@@ -18,3 +18,4 @@
 @using B_B_App.Components.FormEditing
 @using Blazored.FluentValidation
 @using B_B_App.Components.DropDown
+@using B_B_App.Components.Displays
