--- a/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
+++ b/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
@@ -1,4 +1,24 @@
 ﻿
+<MudGrid>
+    <MudItem xs="12">
+        <MudText>
+            Room Accessories
+        </MudText>
+    </MudItem>
+    @foreach (var item in RoomAccessories)
+    {
+        <MudItem sm="1">
+            <MudText>
+                @item.Type
+            </MudText>
+        </MudItem>
+    }
+</MudGrid>
+
+
 @code {
+
+    [Parameter]
+    public List<RoomAccessory> RoomAccessories { get; set; }
 
 }
