--- a/B&B_App/Pages/RoomDetails.razor
+++ b/B&B_App/Pages/RoomDetails.razor
@@ -1,8 +1,9 @@
 ﻿@page "/roomdetails"
 @page "/roomdetails/{roomId:int}"
-@inject IRoomService<Room> roomService
-@inject ILocationService<Location> locationService
-@inject IPictureService pictureService
+@inject IRoomService<Room> _roomService
+@inject ILocationService<Location> _locationService
+@inject IPictureService _pictureService
+@inject ISnackbar _snackbar
 
 <MudCard Class="indigo lighten-5">
     <MudCardHeader>
@@ -10,9 +11,9 @@
     </MudCardHeader>
 
     <MudCardContent>
-        <MudRating SelectedValue="@Convert.ToInt16(_room.Rating)" ReadOnly="true"/>
+        <MudRating SelectedValue="@Convert.ToInt16(_room.Rating)" ReadOnly="true" />
     </MudCardContent>
-        
+
     <MudCardContent>
 
         <MudText>
@@ -45,9 +46,9 @@
     </MudCardHeader>
 
     <MudCardContent>
-        <MudRating SelectedValue="@Convert.ToInt16(_location.Rating)" ReadOnly="true"/>
+        <MudRating SelectedValue="@Convert.ToInt16(_location.Rating)" ReadOnly="true" />
     </MudCardContent>
-       
+
     <MudCardContent>
 
         <MudText>
@@ -91,6 +92,7 @@
     [Parameter]
     public int? roomId { get; set; }
 
+    private ErrorManager _errorManager;
     private Room _room = new Room();
     private Location _location = new Location();
     private List<Picture> roomPictures = new List<Picture>();
@@ -98,29 +100,29 @@
 
     protected override async Task OnInitializedAsync()
     {
+        #region Data loading
+        _errorManager = new ErrorManager(_snackbar);
         if (roomId == null)
             return;
 
-        // Get room from service
-        // Use roomId to get the selected room
         try
         {
             if (roomId != null)
-                _room = await roomService.Get(roomId.Value);
+                _room = await _roomService.Get(roomId.Value);
             // Get location for the room
-            _location = await locationService.Get(_room.LocationId);
+            _location = await _locationService.Get(_room.LocationId);
 
-            roomPictures = await pictureService.GetRoomPictures(_room.Id);
-            locationPictures = await pictureService.GetLocationPictures(_location.Id);
+            roomPictures = await _pictureService.GetRoomPictures(_room.Id);
+            locationPictures = await _pictureService.GetLocationPictures(_location.Id);
         }
         catch (Exception ex)
         {
-            // should be an errorlog
-            var error = ex;
+            _errorManager.InfoBar("Error while loading data", Variant.Text, Severity.Error);
         }
-
-
+        #endregion
         base.OnInitialized();
     }
+
+
 
 }
