--- a/B&B_App/Pages/RoomDetails.razor
+++ b/B&B_App/Pages/RoomDetails.razor
@@ -1,5 +1,4 @@
-﻿@page "/roomdetails"
-@page "/roomdetails/{roomId:int}"
+﻿@page "/roomdetails/{roomId:int}"
 @inject IRoomService<Room> _roomService
 @inject ILocationService<Location> _locationService
 @inject IPictureService _pictureService
